{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 12,
  "lineage": "498566fe-fac5-477f-f561-73822956e979",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0261755bbcb8c4a84",
            "arn": "arn:aws:ec2:us-east-1:218753546125:instance/i-0382541fc8ccb415f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0382541fc8ccb415f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Laptop-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b999878a354189d6",
            "private_dns": "ip-10-91-1-139.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.91.1.139",
            "public_dns": "ec2-54-90-215-128.compute-1.amazonaws.com",
            "public_ip": "54.90.215.128",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09eb8849f8f47ea3c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07e92dc99569e32da",
            "tags": {
              "CostCenter": "ABCD",
              "Env": "Prod",
              "Name": "Ubuntu-Server",
              "Owner": "RAM"
            },
            "tags_all": {
              "CostCenter": "ABCD",
              "Env": "Prod",
              "Name": "Ubuntu-Server",
              "Owner": "RAM"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0acbc65e8683d1be3"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.subnet1-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218753546125:internet-gateway/igw-041a085f0b26f87a2",
            "id": "igw-041a085f0b26f87a2",
            "owner_id": "218753546125",
            "tags": {
              "Name": "Kubernets-VPC-IGW"
            },
            "tags_all": {
              "Name": "Kubernets-VPC-IGW"
            },
            "vpc_id": "vpc-01e7d5b0d6f1d645b"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218753546125:route-table/rtb-0ee930cb37a4d1bc1",
            "id": "rtb-0ee930cb37a4d1bc1",
            "owner_id": "218753546125",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-041a085f0b26f87a2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Kubernets-Mail-RT"
            },
            "tags_all": {
              "Name": "Kubernets-Mail-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e7d5b0d6f1d645b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00547580899ddafed",
            "route_table_id": "rtb-0ee930cb37a4d1bc1",
            "subnet_id": "subnet-07e92dc99569e32da"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnet1-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029cda7ad0089498d",
            "route_table_id": "rtb-0ee930cb37a4d1bc1",
            "subnet_id": "subnet-054b79de37ce246d8"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnet2-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031f42fafcb229fa6",
            "route_table_id": "rtb-0ee930cb37a4d1bc1",
            "subnet_id": "subnet-03f35ce39c62e858b"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnet3-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218753546125:security-group/sg-0acbc65e8683d1be3",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0acbc65e8683d1be3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "var.sgname",
            "name_prefix": "",
            "owner_id": "218753546125",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Kubernets-VPC-SG-Allow-All"
            },
            "tags_all": {
              "Name": "Kubernets-VPC-SG-Allow-All"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e7d5b0d6f1d645b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218753546125:subnet/subnet-07e92dc99569e32da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.91.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e92dc99569e32da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218753546125",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Kubernets-Subnet-1"
            },
            "tags_all": {
              "Name": "Kubernets-Subnet-1"
            },
            "vpc_id": "vpc-01e7d5b0d6f1d645b"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218753546125:subnet/subnet-054b79de37ce246d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.91.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054b79de37ce246d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218753546125",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Kubernets-Subnet-2"
            },
            "tags_all": {
              "Name": "Kubernets-Subnet-2"
            },
            "vpc_id": "vpc-01e7d5b0d6f1d645b"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218753546125:subnet/subnet-03f35ce39c62e858b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.91.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f35ce39c62e858b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218753546125",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Kubernets-Subnet-3"
            },
            "tags_all": {
              "Name": "Kubernets-Subnet-3"
            },
            "vpc_id": "vpc-01e7d5b0d6f1d645b"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218753546125:vpc/vpc-01e7d5b0d6f1d645b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.91.0.0/16",
            "default_network_acl_id": "acl-0bb6f6aed2c3efcbf",
            "default_route_table_id": "rtb-0403865198bb9cde8",
            "default_security_group_id": "sg-05e9fe556eee54fab",
            "dhcp_options_id": "dopt-05eb23742c2afe02d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01e7d5b0d6f1d645b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0403865198bb9cde8",
            "owner_id": "218753546125",
            "tags": {
              "Env": "prod",
              "Name": "Kubernets-VPC",
              "Owner": "Ram",
              "environment": "Prod"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "Kubernets-VPC",
              "Owner": "Ram",
              "environment": "Prod"
            }
          }
        }
      ]
    }
  ]
}